<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Court Counter</string>

    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="_3_points">+3 Points</string>
    <string name="_0_" tools:ignore="DuplicateDefinition">0</string>
    <string name="_0" tools:ignore="DuplicateDefinition">0</string>
    <string name="_2_points_" tools:ignore="DuplicateDefinition">+2 POINTS</string>
    <string name="free_throw" tools:ignore="DuplicateDefinition">FREE THROW</string>
    <string name="_2_points" tools:ignore="DuplicateDefinition">+2 POINTS</string>
    <string name="free_throw_" tools:ignore="DuplicateDefinition">FREE THROW</string>
    <string name="_3._points_">+3 POINTS</string>
    <string name="reset">RESET</string>
</resources>
